--- a/project/home.html
+++ b/project/home.html
@@ -24,7 +24,7 @@
 
 
     <!-- favicon -->
-    <link rel="icon" type="image/x-icon" href="imgs/logo-5.png">
+    <link rel="icon" type="image/x-icon" href="./imgs/logo-5.png">
 
     <title>Jardín del Tesoro</title>
 </head>
@@ -42,25 +42,25 @@
                 <div class="gigi">
                     <ul class="nav navbar-nav">
                         <li class="nav-item">
-                            <a data-scroll class="nav-link a menuHome" href="./home.html">Inicio</a>
+                            <a data-scroll class="menuHome nav-link a" href="./home.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a menuSectionOne" href="./proyecto.html">Proyecto</a>
+                            <a class="menuSectionOne nav-link a" href="./proyecto.html">Proyecto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a menuSectionTwo" href="./apartamentos.html">Apartamentos</a>
+                            <a class="menuSectionTwo nav-link a" href="./apartamentos.html">Apartamentos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a menuSectionThree" href="./amenidades.html">Amenidades</a>
+                            <a class="menuSectionThree nav-link a" href="./amenidades.html">Amenidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a menuSectionFour" href="./galeria.html">Galeria</a>
+                            <a class="menuSectionFour nav-link a" href="./galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a menuSectionFive" href="./financiamiento.html">Financiamiento</a>
+                            <a class="menuSectionFive nav-link a" href="./financiamiento.html">Financiamiento</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a menuSectionSix" href="./contacto.html">Contacto</a>
+                            <a class="menuSectionSix nav-link a" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -116,8 +116,8 @@
     <!-- section Apartamentos-->
     <section class="banner2 container-fluid4 d-flex align-items-end mt-2">
         <div data-aos="zoom-in-left" class="txt-box m-5 text-white ">
-            <h1>Diseño unificado</h1>
-            <p>lujosos espacios de estar y generosas áreas comunes en un elegante estilo italiano.</p>
+            <h1 class="sectionTitle2">Diseño unificado</h1>
+            <p class="sectionText2">lujosos espacios de estar y generosas áreas comunes en un elegante estilo italiano.</p>
             <div class="container1">
                 <div class="center">
                     <button id="btn-apartamentos" class="btn">
@@ -125,7 +125,7 @@
                       <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
                       <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
                     </svg>
-                    <span>Apartamentos</span>
+                    <span class="sectionButton2">Apartamentos</span>
                   </button>
                 </div>
             </div>
@@ -135,8 +135,8 @@
     <!-- section Amenidades  -->
     <section class="banner3 container-fluid4 d-flex align-items-end mt-2">
         <div data-aos="zoom-in-left" class="txt-box m-5 text-white ">
-            <h1>Bienestar y comodidad</h1>
-            <p>Los residentes disfrutan de una piscina cubierta y un spa ambos con los interiores más asombrosos de la ciudad.</p>
+            <h1 class="sectionTitle3">Bienestar y comodidad</h1>
+            <p class="sectionText3">Los residentes disfrutan de una piscina cubierta y un spa ambos con los interiores más asombrosos de la ciudad.</p>
             <div class="container1">
                 <div class="center">
                     <button id="btn-amenidades" class="btn">
@@ -144,7 +144,7 @@
                         <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
                         <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
                     </svg>
-                    <span>Amenidades</span>
+                    <span  class="sectionButton3">Amenidades</span>
                     </button>
                 </div>
             </div>
@@ -154,8 +154,8 @@
     <!-- section Financiamento  -->
     <section class="banner4 container-fluid4 d-flex align-items-end mt-2">
         <div data-aos="zoom-in-left" class="txt-box m-5 text-white ">
-            <h1>Únete a nosotros</h1>
-            <p>Cotiza el financiamiento de tu apartamentos en el edificio residencial más sofisticado de Taiwan.</p>
+            <h1 class="sectionTitle4">Únete a nosotros</h1>
+            <p class="sectionText4">Cotiza el financiamiento de tu apartamentos en el edificio residencial más sofisticado de Taiwan.</p>
             <div class="container1">
                 <div class="center">
                     <button id="btn-financiamiento" class="btn">
@@ -163,7 +163,7 @@
                         <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
                         <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
                     </svg>
-                    <span>Financiamento</span>
+                    <span  class="sectionButton4">Financiamento</span>
                     </button>
                 </div>
             </div>
@@ -174,10 +174,10 @@
     <footer class=" footer p-4 mt-2">
         <div class="container">
             <div class="d-flex justify-content-center align-items-center">
-                <h1 class="text-white" style="font-weight: bold; font-size: 25px;">Jardín del Tesoro</h1>
+                <h1 class="bottomTitle text-white" style="font-weight: bold; font-size: 25px;">Jardín del Tesoro</h1>
             </div>
             <div class="d-flex justify-content-center align-items-center">
-                <p class="text-white text-center">Los espacios de vida y entretenimiento más grandiosos</p>
+                <p class="bottomText text-white text-center">Los espacios de vida y entretenimiento más grandiosos</p>
             </div>
             <div class="d-flex justify-content-center align-items-center">
                 <div class="container1">
@@ -187,7 +187,7 @@
                             <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
                             <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
                         </svg>
-                        <span>Contacto</span>
+                        <span class="footerButton">Contacto</span>
                         </button>
                     </div>
                 </div>
