--- a/project/proyecto.html
+++ b/project/proyecto.html
@@ -21,9 +21,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css">
 
     <!-- favicon -->
-    <link rel="icon" type="image/x-icon" href="imgs/logo-5.png">
+    <link rel="icon" type="image/x-icon" href="./imgs/logo-5.png">
+
     
-    <title>Hello, world!</title>
+    <title>Jardín del Tesoro</title>
 </head>
 
 <body>
@@ -39,35 +40,35 @@
                 <div class="gigi">
                     <ul class="nav navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link a" href="./home.html">Inicio</a>
+                            <a data-scroll class="menuHomep nav-link a" href="./home.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="./proyecto.html">Proyecto</a>
+                            <a class="menuSectionOnep nav-link a" href="./proyecto.html">Proyecto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="./apartamentos.html">Apartamentos</a>
+                            <a class="menuSectionTwop nav-link a" href="./apartamentos.html">Apartamentos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="./amenidades.html">Amenidades</a>
+                            <a class="menuSectionThreep nav-link a" href="./amenidades.html">Amenidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="./galeria.html">Galeria</a>
+                            <a class="menuSectionFourp nav-link a" href="./galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="./financiamiento.html">Financiamiento</a>
+                            <a class="menuSectionFivep nav-link a" href="./financiamiento.html">Financiamiento</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="./contacto.html">Contacto</a>
+                            <a class="menuSectionSixp nav-link a" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="lang-selector d-flex p-3">
-                <div class="lang-selector-item-1 p-1">
-                    <a class="text-decoration-none" href="">ES</a>
+                <div class="lang-selector-item lang-selector-item-1 p-1">
+                    <a language="español" class="text-decoration-none" href="#">ES</a>
                 </div>
-                <div class="lang-selector-item-2 p-1">
-                    <a class="text-decoration-none" href="">EN</a>
+                <div class="lang-selector-item lang-selector-item-2 p-1">
+                    <a language="english" class="text-decoration-none" href="#">EN</a>
                 </div>
             </div>
         </div>
@@ -92,39 +93,38 @@
                     <div class="dev d-flex align-items-start">
                         <div class="txt-box w-100">
                             <div class="m-5">
-                                <h1 class=" text-white title">TREASURE GARDEN</h1>
-                                <h3 class=" subtitle ps-5">DETALLES</h3>
+                                <h3 class="subtitle ps-5">DETALLES</h3>
                             </div>
                             <div class="m-5 mt-5">
                                 <div>
-                                    <h4 class="tl ps-5">Proyecto</h4>
+                                    <h4 class="t-1 tb ps-5">Proyecto</h4>
 
-                                    <h4 class="tb ps-5">Interiores de edificio</h4>
+                                    <h4 class="tl ps-5 s-1">Interiores de edificio</h4>
                                 </div>
                                 <div>
-                                    <h4 class="tl ps-5">Tipo</h4>
+                                    <h4 class="tb ps-5 t-2">Tipo</h4>
 
-                                    <h4 class="tb ps-5">residencial</h4>
+                                    <h4 class="tl ps-5 s-2">residencial</h4>
                                 </div>
                                 <div>
-                                    <h4 class="tl ps-5">Area</h4>
+                                    <h4 class="tb ps-5 t-3">Area</h4>
 
-                                    <h4 class="tb ps-5">28000 m2</h4>
+                                    <h4 class="tl ps-5">28000 m2</h4>
                                 </div>
                                 <div>
-                                    <h4 class="tl ps-5">Altura</h4>
+                                    <h4 class="tb ps-5 t-4">Altura</h4>
 
-                                    <h4 class="tb ps-5">160 m / 525 ft</h4>
+                                    <h4 class="tl ps-5">160 m / 525 ft</h4>
                                 </div>
                                 <div>
-                                    <h4 class="tl ps-5">Pisos</h4>
+                                    <h4 class="tb ps-5 t-5">Pisos</h4>
 
-                                    <h4 class="tb ps-5">39</h4>
+                                    <h4 class="tl ps-5">39</h4>
                                 </div>
                                 <div>
-                                    <h4 class="tl ps-5">Inaguración</h4>
+                                    <h4 class="tb ps-5 t-6">Inaguración</h4>
 
-                                    <h4 class="tb ps-5">2018</h4>
+                                    <h4 class="tl ps-5">2018</h4>
                                 </div>
 
                             </div>
@@ -136,10 +136,10 @@
                     <div class="dev d-flex align-items-start">
                         <div class="txt-box">
                             <div class="m-5">
-                                <h1 class="title">TREASURE GARDEN</h1>
+                                <h1 class="title">JARDÍN DEL TESORO</h1>
                                 <h3 class="subtitle">TAICHUNG</h3>
                             </div>
-                            <p class="parrafo m-5 mt-5 pe-5">
+                            <p class="paragraph m-5 mt-5 pe-5">
                                 El edificio de la torre residencial esbelto y geométricamente intrincado es un nuevo hito del distrito 7 en Taichung. Gracias a la orientación única de su arquitectura, el edificio da al Summer Green Park, abriendo los elegantes interiores de las residencias
                                 a vistas panorámicas de la ciudad. Compuesto por una serie de aspas delgadas y livianas, se eleva hacia el cielo, consolidando en su diseño áreas residenciales, espacios públicos, terrazas y paisaje. Los espacios públicos
                                 y privados están definidos por un diseño de paisaje funcional y, al mismo tiempo, poético basado en el histórico Hortus Conclusus. La geometría modular en forma de diamante domina tanto la fachada como el interior de las
@@ -182,7 +182,7 @@
     </section>
 
     <section id="s1" class="container-fluid fondotira text-center txt-box">
-        <h1 class="title">Todas las empresas involucradas</h1>
+        <h1 class="companies title">Todas las empresas involucradas</h1>
         <div class="container pt-5">
             <div id="owl-demo" class="owl-carousel text-center">
 
@@ -237,7 +237,7 @@
     <section class="sct-gallery mb-5">
         <div class="banner3 container-fluid3">
             <div class=" text-center txt-box">
-                <h1 class="title">Fotos</h1>
+                <h1 class="blueprints title">Planos</h1>
             </div>
             <div class="gallery">
                 <a href="./imgs/level-0.jpg">
@@ -266,7 +266,7 @@
                         <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
                         <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
                     </svg>
-                    <span>Ver Galeria</span>
+                    <span class="galeryButton">Ver Galeria</span>
                     </button>
                 </div>
             </div>
@@ -277,10 +277,10 @@
     <footer class=" footer p-4 mt-2">
         <div class="container">
             <div class="d-flex justify-content-center align-items-center">
-                <h1 class="text-white" style="font-weight: bold; font-size: 25px;">Jardín del Tesoro</h1>
+                <h1 class="bottomTitle text-white" style="font-weight: bold; font-size: 25px;">Jardín del Tesoro</h1>
             </div>
             <div class="d-flex justify-content-center align-items-center">
-                <p class="text-white text-center">Los espacios de vida y entretenimiento más grandiosos</p>
+                <p class="bottomText text-white text-center">Los espacios de vida y entretenimiento más grandiosos</p>
             </div>
             <div class="d-flex justify-content-center align-items-center">
                 <div class="container1">
@@ -290,7 +290,7 @@
                             <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
                             <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
                         </svg>
-                        <span>Contacto</span>
+                        <span class="footerButton">Contacto</span>
                         </button>
                     </div>
                 </div>
@@ -305,8 +305,9 @@
     <!-- Scroll top -->
     <script src="js/scrolltop.js"></script>
 
-    <!-- idioma -->
-    <script src="js/idioma.js"></script>
+
+    <!-- idioma JS -->
+    <script src="js/idioma-proyecto.js"></script>
 
     <!-- Javascript -->
     <script src="js/proyecto.js"></script>
