--- a/project/amenidades.html
+++ b/project/amenidades.html
@@ -36,35 +36,35 @@
                 <div class="gigi">
                     <ul class="nav navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link a" href="./home.html">Inicio</a>
+                            <a data-scroll class="menuHomep nav-link a" href="./home.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="./proyecto.html">Proyecto</a>
+                            <a class="menuSectionOnep nav-link a" href="./proyecto.html">Proyecto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="./apartamentos.html">Apartamentos</a>
+                            <a class="menuSectionTwop nav-link a" href="./apartamentos.html">Apartamentos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="./amenidades.html">Amenidades</a>
+                            <a class="menuSectionThreep nav-link a" href="./amenidades.html">Amenidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="./galeria.html">Galeria</a>
+                            <a class="menuSectionFourp nav-link a" href="./galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="./financiamiento.html">Financiamiento</a>
+                            <a class="menuSectionFivep nav-link a" href="./financiamiento.html">Financiamiento</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="./contacto.html">Contacto</a>
+                            <a class="menuSectionSixp nav-link a" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="lang-selector d-flex p-3">
-                <div class="lang-selector-item-1 p-1">
-                    <a class="text-decoration-none" href="">ES</a>
+                <div class="lang-selector-item lang-selector-item-1 p-1">
+                    <a language="español" class="text-decoration-none" href="#">ES</a>
                 </div>
-                <div class="lang-selector-item-2 p-1">
-                    <a class="text-decoration-none" href="">EN</a>
+                <div class="lang-selector-item lang-selector-item-2 p-1">
+                    <a language="english" class="text-decoration-none" href="#">EN</a>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
                         <div>
                             <div class="text-white txt-box">
                                 <h1 class="title">Bienestar y comodidad</h1>
-                                <p class="parrafo pe-3">
+                                <p class="paragraph pe-3">
                                     El programa de acondicionamiento físico y bienestar en Treasure Garden Club ha sido desarrollado en colaboración con reconocidos expertos en fitness y operadores. Los residentes disfrutan de una doble altura cancha de deportes con ventanas, una piscina
                                     cubierta y un spa, un gimnasio de alta tecnología diseñado para entrenamiento personal y salón de belleza. Acomoda privado clases de natación, entrenadores, servicios de entrenamiento personal y tratamientos reparadores.</p>
                             </div>
@@ -121,10 +121,10 @@
 
 
     <!-- section gallery -->
-    <section class="sct-gallery mb-5">
+    <section class="sct-gallery mb-5 pt-3 pb-3">
         <div class="banner4 container-fluid3">
             <div class=" text-center txt-box">
-                <h1 class="title">Fotos</h1>
+                <h1 class="blueprints title">Fotos</h1>
             </div>
             <div class="gallery">
                 <a href="./imgs/interior3.jpg">
@@ -153,7 +153,7 @@
                             <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
                             <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
                         </svg>
-                        <span>Ver Galeria</span>
+                        <span class="galleryButton">Ver Galeria</span>
                         </button>
                 </div>
             </div>
@@ -166,10 +166,10 @@
     <footer class=" footer p-4 mt-2">
         <div class="container">
             <div class="d-flex justify-content-center align-items-center">
-                <h1 class="text-white" style="font-weight: bold; font-size: 25px;">Jardín del Tesoro</h1>
+                <h1 class="bottomTitle text-white" style="font-weight: bold; font-size: 25px;">Jardín del Tesoro</h1>
             </div>
             <div class="d-flex justify-content-center align-items-center">
-                <p class="text-white text-center">Los espacios de vida y entretenimiento más grandiosos</p>
+                <p class="bottomText text-white text-center">Los espacios de vida y entretenimiento más grandiosos</p>
             </div>
             <div class="d-flex justify-content-center align-items-center">
                 <div class="container1">
@@ -179,7 +179,7 @@
                                 <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
                                 <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
                             </svg>
-                            <span>Contacto</span>
+                            <span class="footerButton">Contacto</span>
                             </button>
                     </div>
                 </div>
@@ -197,6 +197,9 @@
     <script src="./js/scrolltop.js"></script>
 
     <script src="./js/amenidades.js"></script>
+
+    <!-- idioma -->
+    <script src="./js/idioma-amenidades.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
 
