--- a/project/apartamentos.html
+++ b/project/apartamentos.html
@@ -48,35 +48,35 @@
                 <div class="gigi">
                     <ul class="nav navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link a" href="./home.html">Inicio</a>
+                            <a data-scroll class="menuHomep nav-link a" href="./home.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="./proyecto.html">Proyecto</a>
+                            <a class="menuSectionOnep nav-link a" href="./proyecto.html">Proyecto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="./apartamentos.html">Apartamentos</a>
+                            <a class="menuSectionTwop nav-link a" href="./apartamentos.html">Apartamentos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="./amenidades.html">Amenidades</a>
+                            <a class="menuSectionThreep nav-link a" href="./amenidades.html">Amenidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="./galeria.html">Galeria</a>
+                            <a class="menuSectionFourp nav-link a" href="./galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="./financiamiento.html">Financiamiento</a>
+                            <a class="menuSectionFivep nav-link a" href="./financiamiento.html">Financiamiento</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="./contacto.html">Contacto</a>
+                            <a class="menuSectionSixp nav-link a" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="lang-selector d-flex p-3">
-                <div class="lang-selector-item-1 p-1">
-                    <a class="text-decoration-none" href="">ES</a>
+                <div class="lang-selector-item lang-selector-item-1 p-1">
+                    <a language="español" class="text-decoration-none" href="#">ES</a>
                 </div>
-                <div class="lang-selector-item-2 p-1">
-                    <a class="text-decoration-none" href="">EN</a>
+                <div class="lang-selector-item lang-selector-item-2 p-1">
+                    <a language="english" class="text-decoration-none" href="#">EN</a>
                 </div>
             </div>
         </div>
@@ -101,7 +101,7 @@
                         <div>
                             <div class="text-white txt-box">
                                 <h1 class="title">DISEÑO UNIFICADO</h1>
-                                <p class="parrafo pe-3">
+                                <p class="paragraph pe-3">
                                     Esta nueva torre residencial se caracteriza por piezas arquitectónicas de lamas esbeltas y ligeras, desde el suelo hasta el cielo, cubiertas por una pantalla en forma de diamante de geometría elegante y flexible aplicada tanto en fachada como en el interior
                                     de los espacios comunes. El proyecto de paisaje se basa en la definición de un espacio de acceso claro y definido. Delimita un lugar privado, definido hacia el exterior por un doble cerramiento con diseño de diamante,
                                     un muro filtrante para crear un jardín rico, tranquilo y poético, con árboles frutales en su interior, y árboles escultóricos para marcar el acceso vehicular y la entrada.</p>
@@ -135,10 +135,10 @@
     </section>
 
     <!-- section testimonial -->
-    <section class="">
+    <section class=" pt-3 pb-3">
         <div class="container-sm-6 pt-5 m-3">
-            <h2 class="titulos text-center">Testimoniales</h2>
-            <p class="objetivo text-center">
+            <h2 class="title testi text-center">Testimoniales</h2>
+            <p class="quote text-center tl">
                 “Es la atención a la calidad de los interiores lo que distingue al proyecto. Para nosotros es difícil pensar en arquitectura sin imaginar cómo es el interior del edificio. La extraordinaria iluminación de la entrada, la calidad de los muebles y los accesorios
                 marcan la diferencia.” – Antonio Citterio
             </p>
@@ -149,37 +149,36 @@
 
                 <!-- web avatars: https://www.freepik.es/search?format=search&query=avatars&type=vector -->
 
-
                 <div class="testimonials owl-carousel owl-theme">
                     <div class="item">
                         <img src="https://images.pexels.com/photos/3586798/pexels-photo-3586798.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
-                        <h3>Angie Vargas</h3>
-                        <p> ha sido increíble, la mejor residencia de Taichung.</p>
+                        <h3 class="tb">Angie Vargas</h3>
+                        <p  class="tx-1 tl">La mejor residencia en Taichung.</p>
                     </div>
                     <div class="item">
                         <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
-                        <h3>Jason Villanueva</h3>
-                        <p>Amo la arquitectura y sus lujosos interiores.</p>
+                        <h3 class="tb">Jason Villanueva</h3>
+                        <p class="tx-2 tl">Amo la diseños y sus lujosos interiores.</p>
                     </div>
                     <div class="item">
                         <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
-                        <h3>Keyleb Smith</h3>
-                        <p> la tranquildad de el lugar es un punto a favor.</p>
+                        <h3 class="tb">Keyleb Smith</h3>
+                        <p class="tx-3 tl">La tranquildad es un punto a favor.</p>
                     </div>
                     <div class="item">
                         <img src="https://images.pexels.com/photos/1239288/pexels-photo-1239288.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
-                        <h3>Laura Solano</h3>
-                        <p>Entré al edificio y su diseño es impresionante</p>
+                        <h3 class="tb" >Laura Solano</h3>
+                        <p class="tx-4 tl">Su diseño es impresionante.</p>
                     </div>
                     <div class="item">
                         <img src="https://images.pexels.com/photos/3222422/pexels-photo-3222422.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
-                        <h3>Daniel Quirós</h3>
-                        <p>Enamorado con el lugar y los acabados</p>
+                        <h3  class="tb" >Daniel Quirós</h3>
+                        <p class="tx-5 tl">Enamorado con el lugar y los acabados.</p>
                     </div>
                     <div class="item">
                         <img src="https://images.pexels.com/photos/2613260/pexels-photo-2613260.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
-                        <h3>Karina Muñoz</h3>
-                        <p>La mejor residencia</p>
+                        <h3  class="tb" >Karina Muñoz</h3>
+                        <p class="tx-6 tl">La mejor residencia.</p>
                     </div>
                 </div>
             </div>
@@ -192,7 +191,7 @@
 
     <section class="ftco-counter" id="section-counter">
         <div class="container txt-box">
-            <h2 class="title text-center">Detalles</h2>
+            <h2 class="subtitle title text-center">Detalles</h2>
             <div class="row pt-5">
                 <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
                     <div class="block-18 text-center">
@@ -243,10 +242,10 @@
     </section>
 
     <!-- section gallery -->
-    <section class="sct-gallery mb-5">
+    <section class="sct-gallery mb-5 p-3">
         <div class="banner4 container-fluid3">
             <div class=" text-center txt-box">
-                <h1 class="title">Fotos</h1>
+                <h1 class="blueprints title">Fotos</h1>
             </div>
             <div class="gallery">
                 <a href="./imgs/apart-1.jpeg">
@@ -275,7 +274,7 @@
                             <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
                             <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
                         </svg>
-                        <span>Ver Galeria</span>
+                        <span class="galleryButton">Ver Galeria</span>
                         </button>
                 </div>
             </div>
@@ -286,10 +285,10 @@
     <footer class=" footer p-4 mt-1">
         <div class="container">
             <div class="d-flex justify-content-center align-items-center">
-                <h1 class="text-white" style="font-weight: bold; font-size: 25px;">Jardín del Tesoro</h1>
+                <h1 class="bottomTitle text-white" style="font-weight: bold; font-size: 25px;">Jardín del Tesoro</h1>
             </div>
             <div class="d-flex justify-content-center align-items-center">
-                <p class="text-white text-center">Los espacios de vida y entretenimiento más grandiosos</p>
+                <p class="bottomText  text-white text-center">Los espacios de vida y entretenimiento más grandiosos</p>
             </div>
             <div class="d-flex justify-content-center align-items-center">
                 <div class="container1">
@@ -299,7 +298,7 @@
                                 <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
                                 <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
                             </svg>
-                            <span>Contacto</span>
+                            <span class="footerButton">Contacto</span>
                             </button>
                     </div>
                 </div>
@@ -341,6 +340,9 @@
 
     <!-- Javascript -->
     <script src="js/apartamentos.js"></script>
+
+    <script src="js/idioma-apartamentos.js"></script>
+
 
     <!-- light gallery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
