--- a/project/amenidades.html
+++ b/project/amenidades.html
@@ -79,17 +79,16 @@
     <section class="sct-apart">
         <div class="banner2 container-fluid3 p-5">
             <div id="invi-nav-04"></div>
-            <div class="row align-items-center gx-5 gy-4 p-4">
-                <div class="col-sm-12 col-md-6 col-lg-6 news d-flex align-items-center m-0 p-0" style="height: 670px !important;">
+            <div class="row align-items-center gx-5 gy-4">
+                <div class="col-sm-12 col-md-6 col-lg-6 news d-flex align-items-center m-0 p-0" style="height: auto !important;">
                     <div class="dev d-flex align-items-center">
-                        <div>
+
                             <div class="text-white txt-box">
                                 <h1 class="title">Bienestar y comodidad</h1>
                                 <p class="paragraph pe-3">
                                     El programa de acondicionamiento físico y bienestar en Treasure Garden Club ha sido desarrollado en colaboración con reconocidos expertos en fitness y operadores. Los residentes disfrutan de una doble altura cancha de deportes con ventanas, una piscina
                                     cubierta y un spa, un gimnasio de alta tecnología diseñado para entrenamiento personal y salón de belleza. Acomoda privado clases de natación, entrenadores, servicios de entrenamiento personal y tratamientos reparadores.</p>
                             </div>
-                        </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 m-0 p-0">
@@ -97,10 +96,10 @@
                     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./imgs/apart-1.jpeg" class="d-block w-100 news" alt="...">
+                                <img src="./imgs/apart-1.jpeg" class="d-block w-100 news1" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="./imgs/apart-2.jpeg" class="d-block w-100 news" alt="...">
+                                <img src="./imgs/apart-2.jpeg" class="d-block w-100 news1" alt="...">
                             </div>
                         </div>
                     </div>
