--- a/project/apartamentos.html
+++ b/project/apartamentos.html
@@ -94,19 +94,16 @@
     <!-- section 2 -->
     <section class="sct-apart">
         <div class="banner2 container-fluid3 p-5">
-            <div id="invi-nav-04"></div>
-            <div class="row align-items-center gx-5 gy-4 p-4">
-                <div class="col-sm-12 col-md-6 col-lg-6 news d-flex align-items-center m-0 p-0" style="height: 670px !important;">
+            <div class="row align-items-center gx-5 gy-4">
+                <div class="col-sm-12 col-md-6 col-lg-6 news d-flex align-items-center m-0 p-0" style="height: auto !important;">
                     <div class="dev d-flex align-items-center">
-                        <div>
-                            <div class="text-white txt-box">
+                            <div class="text-white txt-box1 p-2">
                                 <h1 class="title">DISEÑO UNIFICADO</h1>
                                 <p class="paragraph pe-3">
                                     Esta nueva torre residencial se caracteriza por piezas arquitectónicas de lamas esbeltas y ligeras, desde el suelo hasta el cielo, cubiertas por una pantalla en forma de diamante de geometría elegante y flexible aplicada tanto en fachada como en el interior
                                     de los espacios comunes. El proyecto de paisaje se basa en la definición de un espacio de acceso claro y definido. Delimita un lugar privado, definido hacia el exterior por un doble cerramiento con diseño de diamante,
-                                    un muro filtrante para crear un jardín rico, tranquilo y poético, con árboles frutales en su interior, y árboles escultóricos para marcar el acceso vehicular y la entrada.</p>
+                                    un muro filtrante para crear un jardín rico, tranquilo.</p>
                             </div>
-                        </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 m-0 p-0">
@@ -114,10 +111,10 @@
                     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./imgs/apart-1.jpeg" class="d-block w-100 news" alt="...">
+                                <img src="./imgs/apart-1.jpeg" class="d-block w-100 news1" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="./imgs/apart-2.jpeg" class="d-block w-100 news" alt="...">
+                                <img src="./imgs/apart-2.jpeg" class="d-block w-100 news1" alt="...">
                             </div>
                         </div>
                     </div>
