--- a/project/financiamiento.html
+++ b/project/financiamiento.html
@@ -77,7 +77,7 @@
     </div>
 
     <!-- Combo Simple -->
-    <section class="bg6 m-5">
+    <section class="bg6 m-2">
         <div class="row align-items-center gx-5 gy-4 p-4">
             <div class="col-sm-12 col-md-6 col-lg-6 news d-flex justify-content-center shadow m-0 p-0" style="height: 670px !important;">
                 <div class="dev d-flex align-items-center">
@@ -114,7 +114,7 @@
             <div class="col-sm-12 col-md-6 col-lg-6 m-0 p-0">
 
                 <div class="carousel-item active">
-                    <img src="./imgs/torre9.jpg" class="d-block w-100 news" alt="..." id="imagen">
+                    <img src="./imgs/torre9.jpg" class="d-block w-100 news1" alt="..." id="imagen">
                 </div>
 
 
@@ -125,7 +125,7 @@
     </section>
 
     <!-- Combo Combinado -->
-    <section class="bg6 m-5">
+    <section class="bg6 m-2">
         <div class="row align-items-center gx-5 gy-4 p-4">
             <div class="col-sm-12 col-md-6 col-lg-6 news d-flex justify-content-center shadow m-0 p-0" style="height: 670px !important;">
                 <div class="dev d-flex align-items-center">
@@ -182,7 +182,7 @@
     <section>
         <main class="">
             <div class="">
-                <section class="row mt-2 align-items-center gx-4 gy-4 p-5 " style="background-color: rgba(211, 205, 205, 0.382);">
+                <section class="row mt-2 align-items-center gx-4 gy-4 p-2" style="background-color: rgba(211, 205, 205, 0.382);">
                     <div class="col-sm-12 col-md-6 col-lg-4 m-0">
 
                         <!-- page 1 -->
@@ -344,7 +344,7 @@
                     <!-- page resultado -->
                     <div class="col-sm-12 col-md-6 col-lg-8">
                         <div class="d-flex justify-content-center tt">
-                            <div class="container" style="width: 100%;">
+                            <div style="width: 100%;">
                                 <div class="card">
                                     <div class="card-body mx-4">
                                         <!-- animacion -->
