--- a/project/home.html
+++ b/project/home.html
@@ -96,9 +96,9 @@
 
     <!-- section Proyecto -->
     <section class="banner1 container-fluid4 d-flex align-items-end mt-2">
-        <div data-aos="zoom-in-left" class="txt-box m-5 text-white ">
+        <div data-aos="zoom-in-left" class="txt-box m-3 text-white ">
             <h1 class="sectionTitle">Refinada e icónica</h1>
-            <p class="sectionText">la fachada refleja un espectro dinámico de color y luz a medida que el sol se mueve por la superficie del edificio.</p>
+            <p class="sectionText">La fachada refleja un espectro dinámico de color y luz a medida que el sol se mueve por la superficie del edificio.</p>
             <div class="container1">
                 <div class="center">
                     <button id="btn-proyecto" class="btn">
@@ -115,9 +115,9 @@
 
     <!-- section Apartamentos-->
     <section class="banner2 container-fluid4 d-flex align-items-end mt-2">
-        <div data-aos="zoom-in-left" class="txt-box m-5 text-white ">
+        <div data-aos="zoom-in-left" class="txt-box m-3 text-white ">
             <h1 class="sectionTitle2">Diseño unificado</h1>
-            <p class="sectionText2">lujosos espacios de estar y generosas áreas comunes en un elegante estilo italiano.</p>
+            <p class="sectionText2">Lujosos espacios de estar y generosas áreas comunes en un elegante estilo italiano.</p>
             <div class="container1">
                 <div class="center">
                     <button id="btn-apartamentos" class="btn">
@@ -134,7 +134,7 @@
 
     <!-- section Amenidades  -->
     <section class="banner3 container-fluid4 d-flex align-items-end mt-2">
-        <div data-aos="zoom-in-left" class="txt-box m-5 text-white ">
+        <div data-aos="zoom-in-left" class="txt-box m-3 text-white ">
             <h1 class="sectionTitle3">Bienestar y comodidad</h1>
             <p class="sectionText3">Los residentes disfrutan de una piscina cubierta y un spa ambos con los interiores más asombrosos de la ciudad.</p>
             <div class="container1">
@@ -153,7 +153,7 @@
 
     <!-- section Financiamento  -->
     <section class="banner4 container-fluid4 d-flex align-items-end mt-2">
-        <div data-aos="zoom-in-left" class="txt-box m-5 text-white ">
+        <div data-aos="zoom-in-left" class="txt-box m-3 text-white ">
             <h1 class="sectionTitle4">Únete a nosotros</h1>
             <p class="sectionText4">Cotiza el financiamiento de tu apartamentos en el edificio residencial más sofisticado de Taiwan.</p>
             <div class="container1">
