--- a/project/proyecto.html
+++ b/project/proyecto.html
@@ -80,22 +80,21 @@
 
     <!-- Banner Principal -->
     <section class="sct-entrance">
-        <div class="banner container-fluid4 m-5">
+        <div class="banner container-fluid4 m-3">
         </div>
     </section>
 
     <!-- Banner Principal -->
     <section class="sct-entrance">
-        <div class="banner2 container-fluid3 ">
-            <div class="row align-items-center gx-5 gy-4 p-4">
+        <div class="banner2 container-fluid3 m3 ">
+            <div class="row align-items-center gx-5 gy-4 p-4 h-auto">
                 <div class="col-sm-12 col-md-6 col-lg-6 news m-0 p-0">
-
-                    <div class="dev d-flex align-items-start">
-                        <div class="txt-box w-100">
-                            <div class="m-5">
+                    <div class="dev d-flex  align-items-center">
+                        <div class="txt-box w-100 pb-3">
+                            <div class="m-2">
                                 <h3 class="subtitle ps-5">DETALLES</h3>
                             </div>
-                            <div class="m-5 mt-5">
+                            <div class="m-2 mt-5">
                                 <div>
                                     <h4 class="t-1 tb ps-5">Proyecto</h4>
 
@@ -132,14 +131,13 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 m-0 p-0">
-
-                    <div class="dev d-flex align-items-start">
-                        <div class="txt-box">
-                            <div class="m-5">
+                    <div class="dev d-flex align-items-start align-items-center">
+                        <div class="txt-box" style="margin-top: 80px;">
+                            <div class="m-3">
                                 <h1 class="title">JARDÍN DEL TESORO</h1>
                                 <h3 class="subtitle">TAICHUNG</h3>
                             </div>
-                            <p class="paragraph m-5 mt-5 pe-5">
+                            <p class="paragraph  m-3">
                                 El edificio de la torre residencial esbelto y geométricamente intrincado es un nuevo hito del distrito 7 en Taichung. Gracias a la orientación única de su arquitectura, el edificio da al Summer Green Park, abriendo los elegantes interiores de las residencias
                                 a vistas panorámicas de la ciudad. Compuesto por una serie de aspas delgadas y livianas, se eleva hacia el cielo, consolidando en su diseño áreas residenciales, espacios públicos, terrazas y paisaje. Los espacios públicos
                                 y privados están definidos por un diseño de paisaje funcional y, al mismo tiempo, poético basado en el histórico Hortus Conclusus. La geometría modular en forma de diamante domina tanto la fachada como el interior de las
@@ -147,9 +145,7 @@
                             </p>
                         </div>
                     </div>
-
                 </div>
-
             </div>
         </div>
     </section>
@@ -182,10 +178,9 @@
     </section>
 
     <section id="s1" class="container-fluid fondotira text-center txt-box">
-        <h1 class="companies title">Todas las empresas involucradas</h1>
+        <h1 class="companies title2">Empresas involucradas</h1>
         <div class="container pt-5">
             <div id="owl-demo" class="owl-carousel text-center">
-
                 <div class="item">
                     <div class="">
                         <!-- lazyOwl es una instruccion de JS para agilizar la carga de las fotos -->
