--- a/project/contacto.html
+++ b/project/contacto.html
@@ -73,13 +73,12 @@
         </div>
     </div>
 
-    <section class="bg6 m-5">
+    <section class="bg6 m-2">
         <div id="invi-nav-04"></div>
         <div class="row align-items-center gx-5 gy-4 p-4">
             <div class="col-sm-12 col-md-6 col-lg-6 news d-flex justify-content-center shadow m-0 p-0" style="height: 670px !important;">
-                <div class="dev d-flex">
-                    <div>
-                        <div class="txt-box">
+                <div class="dev d-flex justify-content-center">
+                        <div class="txt-box w-75">
 
                             <div class="form d-flex justify-content-center">
                                 <div class="form-group">
@@ -117,7 +116,6 @@
                             </div>
 
                         </div>
-                    </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6 m-0 p-0">
@@ -125,31 +123,31 @@
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./imgs/torre9.jpg" class="d-block w-100 news" alt="...">
+                            <img src="./imgs/torre9.jpg" class="d-block news" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./imgs/torre4.jpg" class="d-block w-100 news" alt="...">
+                            <img src="./imgs/torre4.jpg" class="d-block news" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./imgs/torre7.jpg" class="d-block w-100 news" alt="...">
+                            <img src="./imgs/torre7.jpg" class="d-block news" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./imgs/torre10.jpg" class="d-block w-100 news" alt="...">
+                            <img src="./imgs/torre10.jpg" class="d-block  news" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./imgs/torre11.jpg" class="d-block w-100 news" alt="...">
+                            <img src="./imgs/torre11.jpg" class="d-block  news" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./imgs/torre12.jpg" class="d-block w-100 news" alt="...">
+                            <img src="./imgs/torre12.jpg" class="d-block news" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./imgs/torre13.jpg" class="d-block w-100 news" alt="...">
+                            <img src="./imgs/torre13.jpg" class="d-block news" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./imgs/torre14.jpg" class="d-block w-100 news" alt="...">
+                            <img src="./imgs/torre14.jpg" class="d-block news" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./imgs/torre15.jpg" class="d-block w-100 news" alt="...">
+                            <img src="./imgs/torre15.jpg" class="d-block news" alt="...">
                         </div>
                     </div>
                 </div>
